--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,8 +2,9 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     padding-left: 40px ;
     padding-right: 40px;
-    padding-top:30px;
+    padding-top:40px;
     text-align: center;
+    line-height: 10px;
     background: linear-gradient(220deg, rgb(238, 142, 230) 13.2%, rgb(167, 229, 243) 65%)}
 
                
