added css padding

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,6 +3,7 @@ body {
     padding-left: 40px ;
     padding-right: 40px;
     padding-top:40px;
+    padding-bottom: 40px;
     text-align: center;
     line-height: 10px;
     background: linear-gradient(220deg, rgb(238, 142, 230) 13.2%, rgb(167, 229, 243) 65%)}
