--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,6 +11,11 @@ body {
 
 h2 {
     font-size: 20px;
-    padding-bottom: 40px;
+    padding-left: 100px ;
+    padding-right: 100px;
+    padding-bottom: 100px;
+}
+
+
 
 }
