--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,28 @@
-
+.DictionaryApp {
+    padding: 30px;
+    text-align: center;
+    margin: 0 auto;
+    font-style: mono spaces;
+  font-weight: bolder;
+  font-size: 20px;
+  }
+  
+  .Dictionary{
+   padding: 20px;
+    text-align: center;
+    margin: 0 auto;
+    font-style: mono space;
+  font-weight: bolder;
+  font-size: 15px;
+  border: aliceblue;
+  border-style: solid;
+  
+  }
+  
+  .Instructions {
+    text-align: center;
+    font-size: 11px;
+    font-weight:bold;
+  
+  }
  
