--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,30 @@
+body{
+  background-color: palevioletred;
+}
+
+a{
+  color: black;
+}
 .DictionaryApp {
     padding: 30px;
-    text-align: center;
+    text-align: justify;
     margin: 0 auto;
     font-style: mono spaces;
   font-weight: bolder;
   font-size: 20px;
+  border-color: palevioletred;
   }
   
   .Dictionary{
-   padding: 20px;
-    text-align: center;
+  
+    text-align: justif;
     margin: 0 auto;
     font-style: mono space;
   font-weight: bolder;
   font-size: 15px;
-  border: aliceblue;
-  border-style: solid;
+  box-sizing: content-box;
+  box-shadow: papayawhip;
+  
   
   }
   
